# BrainKit

./: .env.example  .gitignore  F001_IMPLEMENTATION_SUMMARY.md  F001_USER_AUTHENTICATION_SETUP.md  Makefile  README.md
backend/: .mcp.json  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_create_profiles_table.py  001_create_profiles_table.sql  002_create_decks_table.py  003_create_flashcards_table.py  003_create_mnemonic_generations_table.py  004_create_mnemonic_generations_table.py  007_APPLY_MIGRATION.md  007_create_study_sessions_tables.sql
backend/app/: __init__.py  main.py
backend/app/api/routes/: __init__.py  auth.py  decks.py  flashcards.py  health.py  mnemonics.py  pdf.py  stats.py  study.py
backend/app/core/: config.py  database.py  supabase.py
backend/app/models/: __init__.py  deck.py  flashcard.py  mnemonic_generation.py  profile.py
backend/app/schemas/: __init__.py  auth.py  deck.py  flashcard.py  mnemonic.py  pdf.py  study.py
backend/app/services/: __init__.py  auth_service.py  claude_service.py  deck_service.py  flashcard_service.py  mnemonic_service.py  pdf_service.py  srs_service.py
backend/scripts/: apply_migration_007.py
backend/tests/: __init__.py
backend/tests/services/: test_claude_service.py  test_flashcard_service.py  test_mnemonic_service.py  test_pdf_service.py  test_srs_service.py
design/: design-system.md
docker/: docker-compose.yml
frontend/: .env.example  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  (+1 more)
(+88 files in other folders)
